fix: update deployment configs for Netlify and Redis

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,5 @@ ALLOWED_ORIGINS=http://localhost:5173
 RESEND_API_KEY=your_resend_api_key_here
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_SSL=false
