--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,6 +19,8 @@ resend.api.key=${RESEND_API_KEY:}
 # Redis Configuration
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
+spring.data.redis.ssl.enabled=${REDIS_SSL:false}
 
 # Logging
 logging.level.org.springframework.security=INFO
