--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,6 +13,9 @@ application.security.jwt.secret-key=${JWT_SECRET:404E635266556A586E3272357538782
 application.security.jwt.expiration=86400000
 application.security.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:5173}
 
+# Application Base URL (for emails)
+application.base-url=${APP_BASE_URL:http://localhost:8080}
+
 # Email (Resend)
 resend.api.key=${RESEND_API_KEY:}
 
