--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -43,10 +43,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     // Email
-    implementation 'com.resend:resend-java:3.1.0'
-
-    // Utilities
-    compileOnly 'org.projectlombok:lombok'
+	implementation 'com.resend:resend-java:3.1.0'
+	implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'
+	compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0' // Swagger Documentation
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
